--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {test}-{py36}
+envlist = {test}
 skipsdist=True
 
 [testenv]
@@ -7,3 +7,4 @@ deps =
     pytest
     cookiecutter
 commands = pytest tests
+basepython: python3.7
