--- a/{{cookiecutter.project_slug}}/microservice-tox.ini
+++ b/{{cookiecutter.project_slug}}/microservice-tox.ini
@@ -7,6 +7,10 @@ deps =
     -rrequirements.txt
     lint: flake8
     lint: pipenv
+    lint: flake8
+    lint: pipenv
+    lint: flake8-import-order
+    lint: flake8-eradicate
     test: pytest
     test: pytest-cov
     docs: sphinx
@@ -18,10 +22,9 @@ commands =
     lint: pipenv check
     test: pytest -rs tests/ --log-level=WARNING --cov={{cookiecutter.project_slug}} --html={toxinidir}/reports/{envname}.html --self-contained-html --cov-report html:{toxinidir}/reports/{envname}-coverage.html
     docs: sphinx -b html -a {toxinidir}/source {toxinidir}/docs/html
-    build: python setup.py sdist --format=zip
-    build: python setup.py sdist --format=gztar
-    build: python setup.py bdist_wheel
-
+    build: python setup.py bdist_wheel --dist-dir=docker-build
+    build: docker build -t {{cookiecutter.package}}:{env:VERSION::latest} .
+    build: python -c "import shutil; shutil.rmtree('docker-build')"
 
 [testenv:setup_version]
 deps = versioneer
@@ -35,3 +38,23 @@ envdir = {toxinidir}/.venv
 commands = 
     pip install -rrequirements.txt
     python setup.py develop
+
+[testenv:compose]
+; Build and run docker-compose
+commands =
+    tox -e build
+    docker-compose up
+whitelist:
+    tox
+    docker-compose
+skip_install = True
+envdir = {toxinidir}/.venv
+
+[testenv:serve]
+; Debug server for local development
+commands =
+    pip install -r requirements.txt
+    python setup.py develop
+    python -m {{cookiecutter.package}}.server
+skip_install = True
+envdir = {toxinidir}/.venv
