--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -1,5 +1,4 @@
-{% raw %}
-name: Lint & Test
+name: Test
 
 on:
   push:
@@ -26,4 +25,3 @@ jobs:
         pip install tox
     - name: Test
       run: tox -e test
-{% endraw %}
