--- a/{{cookiecutter.project_slug}}/microservice-tox.ini
+++ b/{{cookiecutter.project_slug}}/microservice-tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {test}-{py35,py36}
+envlist = {test}
 
 
 [testenv]
@@ -25,12 +25,12 @@ commands =
     build: python setup.py bdist_wheel --dist-dir=docker-build
     build: docker build -t {{cookiecutter.package}}:{env:VERSION::latest} .
     build: python -c "import shutil; shutil.rmtree('docker-build')"
+basepython=python3.7
 
 [testenv:setup_version]
 deps = versioneer
 commands = versioneer install
 skip_install=True
-
 
 [testenv:develop]
 skip_install = True
