--- a/{{cookiecutter.project_slug}}/package-tox.ini
+++ b/{{cookiecutter.project_slug}}/package-tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {test}-{py35,py36}
+envlist = {test}
 
 
 [testenv]
@@ -25,7 +25,7 @@ commands =
     build: python setup.py sdist --format=zip
     build: python setup.py sdist --format=gztar
     build: python setup.py bdist_wheel
-
+basepython=python3.7
 
 [testenv:setup_version]
 deps = versioneer
