--- a/{{cookiecutter.project_slug}}/microservice-tox.ini
+++ b/{{cookiecutter.project_slug}}/microservice-tox.ini
@@ -21,7 +21,7 @@ commands =
     lint: flake8 src/
     lint: pipenv check
     test: pytest -rs tests/ --log-level=WARNING --cov={{cookiecutter.project_slug}} --html={toxinidir}/reports/{envname}.html --self-contained-html --cov-report html:{toxinidir}/reports/{envname}-coverage.html
-    docs: sphinx -b html -a {toxinidir}/source {toxinidir}/docs/html
+    docs: python -m sphinx -b html -a {toxinidir}/docs/source {toxinidir}/docs/html
     build: python setup.py bdist_wheel --dist-dir=docker-build
     build: docker build -t {{cookiecutter.package}}:{env:VERSION::latest} .
     build: python -c "import shutil; shutil.rmtree('docker-build')"
