--- a/{{cookiecutter.project_slug}}/package-tox.ini
+++ b/{{cookiecutter.project_slug}}/package-tox.ini
@@ -15,6 +15,7 @@ deps =
     test: pytest-cov
     docs: sphinx
     docs: sphinx_rtd_theme
+    docs: release_changelog
     build: wheel
 
 commands = 
