--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -1,9 +1,59 @@
+[metadata]
+name = {{cookiecutter.package}}
+author = {{cookiecutter.author}}
+author_email = {{cookiecutter.email}}
+description = {{cookiecutter.description}}
+long_descripion = file:README.rst
+long_description_content_type = text/x-rst
+url = {{cookiecutter.url}}
+classifiers =
+        Environment :: Console
+        Topic :: Software Development :: Libraries :: Python Modules
+        Programming Language :: Python :: 3
+        Intended Audience :: Developers
+    	License :: OSI Approved :: MIT License
+        Operating System :: Microsoft :: Windows
+        Operating System :: POSIX :: Linux
+        Operating System :: MacOS :: MacOS X
+        Natural Language :: English
+provides =
+    {{cookiecutter.package}}
+;can't use this as we are setting requirements in setup.py which breaks the wheel
+;requires-dist = setuptools
+
+[options]
+setup_requires =
+    setuptools
+package_dir =
+    =src
+packages = find:
+python_requires = >=3
+
+[options.package_data]
+* =  *.rst
+     requirements.txt
+     *.ini
+     *.cfg
+     *.whl
+     *.html
+     *.css
+     *.woff
+     *.otf
+     *.svg
+     *.eot
+     *.ttf
+     *.png
+     *.css.map
+
+[options.packages.find]
+where=src
+
 [versioneer]
 VCS = git
 style = pep440
 versionfile_source = src/{{cookiecutter.package}}/_version.py
 versionfile_build = {{cookiecutter.package}}/_version.py
-tag_prefix = 
+tag_prefix =
 parentdir_prefix = {{cookiecutter.package}}-
 
 
@@ -33,7 +83,6 @@ exclude =
     dist,
     # This contains the docs
     docs/*,
-    core_python_build/docs/*,
     # Compiled files
     *.pyc,
     # Docs files
@@ -49,3 +98,13 @@ exclude =
 show_source = True
 statistics = True
 application-import-names={{cookiecutter.package}}
+import-order-style=google
+docstring-convention=google
+
+
+[mypy]
+mypy_path = src/
+ignore_missing_imports = True
+
+[mypy-{{cookiecutter.package}}._version]
+ignore_errors = True
