--- a/{{cookiecutter.project_slug}}/package-tox.ini
+++ b/{{cookiecutter.project_slug}}/package-tox.ini
@@ -3,30 +3,42 @@ envlist = {test}
 
 
 [testenv]
-deps = 
+deps =
     -rrequirements.txt
-    lint: flake8
-    lint: pipenv
-    lint: flake8
-    lint: pipenv
-    lint: flake8-import-order
-    lint: flake8-eradicate
-    test: pytest
-    test: pytest-cov
-    docs: sphinx
-    docs: sphinx_rtd_theme
-    docs: release_changelog
-    build: wheel
+    lint,develop: flake8
+    lint,develop: pipenv
+    lint,develop: flake8-import-order
+    lint,develop: flake8-eradicate
+    lint,develop: flake8-docstrings
+    test,develop: pytest
+    test,develop: pytest-cov
+    test,develop: tox
+    cq,develop: pylint
+    types,develop: mypy
+    types,develop: lxml
+    security,develop: bandit
+    docs,develop: sphinx
+    docs,develop: sphinx_material
+    docs,develop: sphinx_github_changelog
+    build,develop: wheel
 
-commands = 
+commands =
     lint: flake8 src/
     lint: pipenv check
-    test: pytest -rs tests/ --log-level=WARNING --cov={{cookiecutter.project_slug}} --html={toxinidir}/reports/{envname}.html --self-contained-html --cov-report html:{toxinidir}/reports/{envname}-coverage.html
+    test: pytest  {posargs: -rs tests/unit --log-level=WARNING --cov={{cookiecutter.package}} --cov-report xml:{toxinidir}/reports/{envname}-coverage.xml}
     docs: python -m sphinx -b html -a {toxinidir}/docs/source {toxinidir}/docs/html
     build: python setup.py sdist --format=zip
     build: python setup.py sdist --format=gztar
     build: python setup.py bdist_wheel
-basepython=python3.7
+    security: python -c "import os; a = 1 if os.path.exists('reports') else os.makedirs('reports')"
+    security: bandit -r src/ --format xml --output reports/security-results.xml -x *_version.py
+    security: bandit -r src/  -x *_version.py
+    types: python -c "import os; a = 1 if os.path.exists('reports') else os.makedirs('reports')"
+    types: mypy -p {{cookiecutter.package}} --linecoverage-report reports --junit-xml reports/mypy.xml --cobertura-xml-report test-reports
+passenv =
+    docs: SPHINX_GITHUB_CHANGELOG_TOKEN
+
+
 
 [testenv:setup_version]
 deps = versioneer
@@ -37,6 +49,7 @@ skip_install=True
 [testenv:develop]
 skip_install = True
 envdir = {toxinidir}/.venv
-commands = 
+commands =
     pip install -rrequirements.txt
     python setup.py develop
+basepython=python3.7
